# ethelred

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COPYING  README.md  dotenv  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt
.do/: app.yaml
.github/: README.md  pull_request_template.md
.github/workflows/: cd.yaml  check_and_test.yaml  ci.yaml  update-dependencies.yaml
.streamlit/: config.toml
app/: __init__.py  app.py  charts.py  repositories.py
app/delivery_metrics/: domain.py  repository.py
app/pages/: delivery_metrics.py
docker/: .env  Dockerfile  docker-compose.yaml  docker-compose.yml  justfile
docs/: README.md  code_review_guidelines.md  decision_records.md  deployment.md  development.md  walking_skeleton.md
tasks/: __init__.py  __main__.py  analyse.py  db.py  get_job_requests.py  get_jobs.py  get_opencodelists_logins.py  get_project_definitions.py  get_workflow_runs.py  github.py  github_api.py  io.py  tables.py  utils.py
tasks/tasks/: get_github_data.py  get_job_requests.py  get_jobs.py  get_opencodelists_codelist_create_events.py  get_opencodelists_login_events.py  get_opencodelists_logins.py  get_project_definitions.py  get_prs.py  get_workflow_runs.py
tests/: conftest.py  test_get_workflow_runs.py
tests/app/: test_app.py  test_charts.py  test_repositories.py
tests/app/delivery_metrics/: test_domain.py  test_repository.py
tests/app/pages/: test_delivery_metrics.py
tests/jobserver/: get_tables.py  tables.py
tests/tasks/: conftest.py  test_db.py  test_get_job_requests.py  test_get_jobs.py  test_get_opencodelists_logins.py  test_get_project_definitions.py  test_get_workflow_runs.py  test_github.py  test_io.py  test_tasks.py  test_utils.py
tests/tasks/tasks/: test_get_github_data.py  test_get_job_requests.py  test_get_jobs.py  test_get_opencodelists_codelist_create_events.py  test_get_opencodelists_login_events.py  test_get_opencodelists_logins.py  test_get_project_definitions.py  test_get_prs.py  test_get_workflow_runs.py
