[project]
  name = "ethelred"
  version = "0.1.0"
  description = "ethelred.opensafely.org"
  readme = "README.md"
  requires-python = ">=3.12"

dependencies = [
    "altair",
    "duckdb",
    "pandas",
    "requests",
    "sqlalchemy",
    "streamlit",
    "watchdog",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "@abc.abstractmethod",
    'if __name__ == "__main__":',
]
omit = [
    "tasks/__main__.py",
    "tasks/github_api.py",  # too costly to maintain integration tests
    "tests/jobserver/get_tables.py",
    "tests/jobserver/tables.py",
]

[tool.coverage.html]
show_contexts = true

[tool.pytest]
filterwarnings = [
    # Streamlit modifies an Altair chart's theme using a deprecated attribute. We don't
    # control Streamlit, so we ignore warnings from that module without importing Altair.
    "ignore:.*:Warning:streamlit.elements.vega_charts",
]
pythonpath = ["app"]
markers = ["slow"]
strict_markers = true

[tool.ruff]
src = [".", "app"]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "A", # flake8-builtins
    "I", # isort
    "ICN002", # flake8-import-conventions.banned-aliases
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-import-conventions.banned-aliases]
"altair" = ["alt"]
"pandas" = ["pd"]
"streamlit" = ["st"]

[tool.uv]
exclude-newer = "2026-02-17T00:00:00Z"

[dependency-groups]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff",
]
